fix: names too short

--- a/src/app/features/game/game/game.component.css
+++ b/src/app/features/game/game/game.component.css
@@ -5,20 +5,60 @@
   text-align: center;
 }
 
-.players-name{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 0 0 0 25%;
-  width: 50%;
-  min-width: initial !important;
-  overflow: hidden !important;
+@media (min-width: 820px){
 
+  .players-name{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 15%;
+    width: 70%;
+    min-width: initial !important;
+    overflow: hidden !important;
+
+  }
+
+  .players-name > p{
+    font-weight: bold;
+  }
+
+  .star{
+    margin-top: 1%;
+  }
 }
 
-.players-name > p{
-  width: 25%;
-  font-weight: bold;
+@media (max-width: 819px){
+
+  .players-name{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 2%;
+    width: 96%;
+    min-width: initial !important;
+    overflow: hidden !important;
+
+  }
+
+  .players-name > p{
+    font-weight: bold;
+    font-size: 80%;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  .star{
+    display: none;
+  }
+}
+
+@media (min-width: 410px) and (max-width: 500px){
+  .star{
+    width: 30%;
+    margin-top: 3% 1%;
+    font-size: 80%;
+  }
+  
 }
 
 .players-name > p:nth-child(even){
